vlib/v/checker/tests/match_interface_unknown_generic_type_err.vv
interface Value {}

struct Holder {
	val Value
}

fn main() {
	s := Holder{
		val: 42
	}

	match s.val {
		Nil[int] {
			''
		}
		else {
			''
		}
	}
}
